...
    val bringIntoViewRequester = BringIntoViewRequester()

    val context = LocalContext.current

    Scaffold(
        scaffoldState = rememberScaffoldState(snackbarHostState = snackbarHostState),
        modifier = Modifier.testTag("REGISTRATION_SCREEN")
    ) {
        Column(
            modifier = Modifier
                .fillMaxSize()
                .padding(24.dp),
            verticalArrangement = Arrangement.Top,
...
                painterResource(id = R.drawable.ic_logo),
                contentDescription = stringResource(id = R.string.app_icon_button_description),
                modifier = Modifier
                    .size(160.dp)
                    .padding(24.dp)
                    .align(CenterHorizontally)
                    .testTag("APP_ICON"),
            )
            
            OutlinedTextField(
                modifier = Modifier
                    .fillMaxWidth()
                    .onFocusEvent {
                        if (it.isFocused) {
                            coroutineScope.launch {
                                bringIntoViewRequester.bringIntoView()
                            }
                        }
                    }
                    .testTag("REGISTRATION_EMAIL_FIELD"),
                shape = RoundedCornerShape(55),
                value = email,
                label = {
                    Text(
                        text = stringResource(id = R.string.email_field_label)
                    )
...
                        if (it.isFocused) {
                            coroutineScope.launch {
                                bringIntoViewRequester.bringIntoView()
                            }
                        }
                    }
                    .testTag("REGISTRATION_PASSWORD_FIELD"),
                shape = RoundedCornerShape(55),
                value = password,
                label = {
                    Text(
                        text = stringResource(id = R.string.password_field_label)
                    )
...
                } else {
                    PasswordVisualTransformation()
                }, trailingIcon = {
                    if (showPassword) {
                        IconButton(
                            onClick = { showPassword = false },
                            modifier = Modifier.testTag("VISIBILITY_OFF_ICON_TAG"),
                        ) {
                            Icon(
                                painterResource(id = R.drawable.ic_visibility),
                                contentDescription = stringResource(id = R.string.visibility_icon),
                                tint = MaterialTheme.colors.primaryVariant
                            )
                        }
                    } else {
                        IconButton(
                            onClick = { showPassword = true },
                            modifier = Modifier.testTag("VISIBILITY_ON_ICON_TAG")
                        ) {
                            Icon(
                                painterResource(id = R.drawable.ic_visibility_off),
                                contentDescription = stringResource(id = R.string.visibility_off_icon),
                                tint = MaterialTheme.colors.primaryVariant
                            )
...
                        if (it.isFocused) {
                            coroutineScope.launch {
                                bringIntoViewRequester.bringIntoView()
                            }
                        }
                    }
                    .testTag("REGISTRATION_CONFIRMED_PASSWORD_FIELD"),
                shape = RoundedCornerShape(55),
                value = confirmedPassword,
                label = {
                    Text(
                        text = stringResource(id = R.string.password_confirm_field_label)
                    )
...
                    PasswordVisualTransformation()
                },
                trailingIcon = {
                    if (showConfirmPassword) {
                        IconButton(
                            onClick = { showConfirmPassword = false },
                            modifier = Modifier.testTag("CONFIRMED_PASSWORD_VISIBILITY_OFF_ICON_TAG")
                        ) {
                            Icon(
                                painterResource(id = R.drawable.ic_visibility),
                                contentDescription = stringResource(id = R.string.visibility_off_icon),
                                tint = MaterialTheme.colors.primaryVariant,
                            )
                        }
                    } else {
                        IconButton(
                            onClick = { showConfirmPassword = true },
                            modifier = Modifier.testTag("CONFIRMED_PASSWORD_VISIBILITY_ON_ICON_TAG")
                        ) {
                            Icon(
                                painterResource(id = R.drawable.ic_visibility_off),
                                contentDescription = stringResource(id = R.string.visibility_icon),
                                tint = MaterialTheme.colors.primaryVariant,
                            )
...
            Spacer(modifier = Modifier.height(40.dp))

            Button(
                modifier = Modifier
                    .fillMaxWidth()
                    .height(40.dp)
                    .testTag("REGISTRATION_BUTTON"),
                enabled = email.isNotEmpty() && password.isNotEmpty() && password == confirmedPassword,
                content = {
                    Text(
                        text = stringResource(id = R.string.registration_button_text)
                    )
                },
...
            Spacer(modifier = Modifier.height(24.dp))

            OutlinedButton(
                modifier = Modifier
                    .wrapContentSize()
                    .align(CenterHorizontally)
                    .testTag("CANCEL_BUTTON"),
                content = {
                    Text(
                        text = stringResource(id = R.string.cancel_button_text)
                    )
                },
                onClick = {
...
                        }
                    }
                    is Resource.Loading -> {
                        CircularProgressIndicator(
                            modifier = Modifier
                                .size(10.dp)
                                .testTag("REGISTRATION_PROGRESS_INDICATOR"),
                            color = MaterialTheme.colors.primaryVariant
                        )
                    }
                }
            }
        }
...
