...
            Toast.makeText(context, e.message.toString(), Toast.LENGTH_LONG).show()
        }
    }

    Scaffold(
        scaffoldState = rememberScaffoldState(snackbarHostState = snackbarHostState),
        modifier = Modifier.testTag("LOGIN_SCREEN")
    ) {
        Column(
            modifier = Modifier
                .fillMaxSize()
                .padding(24.dp),
            verticalArrangement = Arrangement.Top,
...
